Fix text overflow issue

--- a/app/assets/stylesheets/components/_user_sidebar.scss
+++ b/app/assets/stylesheets/components/_user_sidebar.scss
@@ -7,6 +7,7 @@
   font-size: 10.5pt;
   font-weight: bold;
   margin-top: 5px;
+  word-wrap: break-word;
 }
 
 .user-sidebar-avatar {
@@ -51,6 +52,7 @@
 
 .user-sidebar-location {
   margin-top: 3px;
+  word-wrap: break-word;
 }
 
 p.user-sidebar-location {
@@ -59,6 +61,7 @@ p.user-sidebar-location {
 
 .user-sidebar-bio {
   margin-top: 12px;
+  word-wrap: break-word;
 }
 
 .user-sidebar-edit-bio, .user-sidebar-edit-location {
